Fix translation spacing
- disable version number on footer

--- a/assets/styles/components/_word-list.scss
+++ b/assets/styles/components/_word-list.scss
@@ -109,7 +109,7 @@
 		margin: 0;
 
 		&::before {
-			--margin: 0 #{vars.$spacer * 0.5} 0 0;
+			--margin: 0 #{vars.$spacer * 0.5};
 
 			content: '᛫';
 			margin: var(--margin);
